--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -42,6 +42,9 @@ jobs:
         with:
           python-version-file: ${{ env.PYTHON_VERSION_FILE }}
           cache: pip
+          cache-dependency-path: |
+            pyproject.toml
+            .github/workflows/requirements.txt
 
       - name: 🎨 Install Qt6 Tools
         run: |
@@ -55,8 +58,7 @@ jobs:
 
       - name: 🔧 Install Dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r .github/workflows/requirements.txt
           pip install polib deep-translator coverage
 
       - name: 🔍 Extract Translations
