feat: add dependeny to translate_docs.py

--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -8,6 +8,7 @@ on:
       - 'docs/i18n/**'
       - 'src/jmbde/i18n/**'
       - '.github/workflows/i18n.yml'
+      - scripts/translate_docs.py
   pull_request:
     paths:
       - 'assets/translations/**'
