--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -60,7 +60,7 @@ jobs:
       - name: 🔧 Install Dependencies
         run: |
           pip install -r .github/workflows/requirements.txt
-          pip install polib deep-translator coverage pyside6 frontmatter
+          pip install polib deep-translator coverage pyside6 python-frontmatter
 
       - name: 🔍 Extract Translations
         run: |
