--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,76 +1,55 @@
----
-# SPDX-License-Identifier: EUPL-1.2
-# SPDX-FileCopyrightText: 2024 Jürgen Mülbert <juergen.muelbert@outlook.de>
-# yaml-language-server: $schema=https://json.schemastore.org/pull-request-labeler.json
-# $schema=https://json.schemastore.org/pull-request-labeler.json
-# Configuration for labeling pull requests based on file changes
+# SPDX-License-Identifier: MIT
 
-project:
-  # Add 'root' label to any root file changes, excluding markdown files
-  - label: root
-    paths:
-      - '*'
-      - '!*.md'
+# Labeler configuration
+# Applies labels to pull requests based on the files they modify or other rules
 
-ui:
-  # Add 'ui' label to any changes within the 'ui' package
-  - label: ui
-    paths:
-      - src/ui/**/*
+labels:
+  # Core types based on file changes
+  "type: fix":
+    - "src/**/*.py"
+    - "lib/**/*.py"
+    - "**/bugfix/**"
 
-documentation:
-  # Add 'documentation' label to any changes in documentation files
-  - label: documentation
-    paths:
-      - docs/**/* # Matches all files in the 'docs' directory
-      - '**/*.md' # Matches all markdown files
-      - .github/**/*.md # Matches markdown files in the '.github' directory
+  "type: feature":
+    - "src/**/*.py"
+    - "lib/**/*.py"
+    - "**/feature/**"
 
-dependencies:
-  # Add 'dependencies' label to any changes in dependency files
-  - label: dependencies
-    paths:
-      - requirements*.txt # Matches requirement files
-      - pyproject.toml # Matches Python project configuration file
-      - poetry.lock # Matches Poetry lock file
+  "type: docs":
+    - "docs/**/*.md"
+    - "**/README.md"
+    - "**/CONTRIBUTING.md"
+    - "**/*.rst"
 
-testing:
-  # Add 'testing' label to any changes in test files
-  - label: testing
-    paths:
-      - tests/**/* # Matches all files in the 'tests' directory
-      - pytest.ini # Matches pytest configuration file
-      - conftest.py # Matches pytest's conftest file
+  "type: test":
+    - "tests/**/*.py"
+    - "**/test/**"
+    - "**/test_*.py"
 
-ci:
-  # Add 'ci' label to any changes in CI configuration files
-  - label: ci
-    paths:
-      - .github/workflows/* # Matches all workflow files in the '.github/workflows' directory
-      - .github/actions/* # Matches custom GitHub actions in the '.github/actions' directory
+  # Status labels
+  "status: work-in-progress":
+    - "**/WIP/**"
 
-security:
-  # Add 'security' label to any changes in security-related files
-  - label: security
-    paths:
-      - security/**/* # Matches all files in the 'security' directory
-      - '**/*security*.md' # Matches markdown files with 'security' in the name
+  "status: ready-for-review":
+    - "**/RFR/**"
 
-source:
-  # Add 'source' label to any changes to source files within the 'src' directory, excluding the 'docs' sub-folder
-  - label: source
-    paths:
-      - src/**/* # Matches all files in the 'src' directory
-      - '!src/docs/**/*' # Excludes the 'src/docs' directory
+  # Security and other sensitive changes
+  "security":
+    - "src/security/**/*.py"
+    - "**/auth/**"
+    - "**/oauth/**"
 
-feature:
-  # Add 'feature' label to any PR where the head branch name starts with 'feature'
-  - label: feature
-    branches:
-      - feature/* # Matches branches starting with 'feature/'
+  "breaking":
+    - "**/*.py"
+    - "docs/release-notes/**/*.md"
 
-release:
-  # Add 'release' label to any PR that is opened against the 'main' branch
-  - label: release
-    base-branches:
-      - main
+  "deprecation":
+    - "**/*.py"
+    - "docs/deprecations/**/*.md"
+
+  # PR size labels based on the workflow step
+  "size/xs": []
+  "size/s": []
+  "size/m": []
+  "size/l": []
+  "size/xl": []
